modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.css 	modified:   src/app/app.component.html 	modified:   src/app/app.component.ts 	modified:   src/app/app.module.ts 	new file:   src/app/components/begin/first-run/first-run.component.css 	new file:   src/app/components/begin/first-run/first-run.component.html 	new file:   src/app/components/begin/first-run/first-run.component.spec.ts 	new file:   src/app/components/begin/first-run/first-run.component.ts 	new file:   src/app/components/endpoints/pushed-authorization-requests/pushed-authorization-requests.component.css 	new file:   src/app/components/endpoints/pushed-authorization-requests/pushed-authorization-requests.component.html 	new file:   src/app/components/endpoints/pushed-authorization-requests/pushed-authorization-requests.component.spec.ts 	new file:   src/app/components/endpoints/pushed-authorization-requests/pushed-authorization-requests.component.ts 	new file:   src/app/components/example-request/example-request.component.css 	new file:   src/app/components/example-request/example-request.component.html 	new file:   src/app/components/example-request/example-request.component.spec.ts 	new file:   src/app/components/example-request/example-request.component.ts 	new file:   src/app/components/general/client-authentication/client-authentication.component.css 	new file:   src/app/components/general/client-authentication/client-authentication.component.html 	new file:   src/app/components/general/client-authentication/client-authentication.component.spec.ts 	new file:   src/app/components/general/client-authentication/client-authentication.component.ts 	new file:   src/app/components/general/demonstrating-proof-of-possession/demonstrating-proof-of-possession.component.css 	new file:   src/app/components/general/demonstrating-proof-of-possession/demonstrating-proof-of-possession.component.html 	new f

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~highlight.js/styles/github-dark.css';
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.header {
+    font-size: 2.5em;
+    margin-bottom: 1.5%;
+    color: #FC7E15;
+    font-weight: 500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #FC7E15;
+}
+
+.param-key,
+.param-value {
+    color: #FF3333;
+}
+
+.param-value {
+    filter: brightness(.85);
+}
