modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.html 	modified:   src/app/app.module.ts 	new file:   src/app/components/endpoints/authorization/authorization.component.css 	new file:   src/app/components/endpoints/authorization/authorization.component.html 	new file:   src/app/components/endpoints/authorization/authorization.component.spec.ts 	new file:   src/app/components/endpoints/authorization/authorization.component.ts 	modified:   src/app/components/endpoints/pushed-authorization-requests/pushed-authorization-requests.component.html 	modified:   src/app/components/example-request/example-request.component.html 	modified:   src/app/components/example-request/example-request.component.ts 	modified:   src/index.html 	modified:   src/styles.css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,10 @@
   </div>
 
   <div id="description">
-    <router-outlet></router-outlet>
+    <router-outlet #outlet="outlet"></router-outlet>
+    <div *ngIf="!outlet.isActivated">
+      <div class="header">Welcome to <a target="_blank" href="https://github.com/blazkaro/FAPIServer">FAPIServer
+          documentation</a></div>
+    </div>
   </div>
 </div>
