--- a/src/app/components/example-request/example-request.component.html
+++ b/src/app/components/example-request/example-request.component.html
@@ -7,7 +7,7 @@
         {{reqInfo.method}} {{reqInfo.path}}
     </mat-card-title>
 
-    <mat-card-subtitle>
+    <mat-card-subtitle *ngIf="reqInfo.contentType != null">
         Content-Type {{reqInfo.contentType}}
     </mat-card-subtitle>
 
